replace Axelrod with R. Axelrod
Based on Marc's suggestion

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -95,18 +95,18 @@ used in this work.
 
 Conceptualising strategies and understanding the best way of playing the game
 has been of interest to the scientific community since the formulation of the
-game in 1950~\cite{Flood1958}. Following the computer tournaments of Axelrod in the
+game in 1950~\cite{Flood1958}. Following the computer tournaments of R. Axelrod in the
 1980's~\cite{Axelrod1980a, Axelrod1980b}, a strategy's performance in a round
 robin computer tournament became a common evaluation technique for newly designed
 strategies. Many tournaments have followed Axelrod's~\cite{Bendor1991, Beaufils1997, Stephens2002,
 Kendall2007, Stewart2012, Harper2017} and today more hundreds of strategies exist
 in the literature.
 
-The winner of both of Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
+The winner of both of R. Axelrod's tournaments~\cite{Axelrod1980a, Axelrod1980b}
 was the simple strategy Tit For Tat (TFT) which cooperates
 on the first turn and thereafter copies the previous action of its opponent,
 retailiating against defections with a defection, and forgiving a defection if followed
-by a cooperation. Axelrod concluded that the strategy's robustness was due to four
+by a cooperation. R. Axelrod concluded that the strategy's robustness was due to four
 properties, which he adapted into four suggestions on doing well in an IPD:
 
 \begin{itemize}
@@ -131,7 +131,7 @@ Tat~\cite{tzafestas-2000a}. Adaptive Tit for Tat maintains a continually updated
 opponent's behaviour and uses this estimate to condition its future actions.
 
 Other work has built upon the limitations of TFT, and in some cases have shown
-that suggestions made by Axelrod did not necessarily apply in alternative environmental settings.
+that suggestions made by R. Axelrod did not necessarily apply in alternative environmental settings.
 In~\cite{Bendor1991, Donninger1986, Molander1985, Hammerstein1984} it was shown
 that TFT suffered in environments with noise. This was
 mainly due to the strategy's lack of generosity and contrition. Since TFT immediately
@@ -157,7 +157,7 @@ which some were reportedly successful \cite{Stewart2012}, this result has not ge
 held in future work. In~\cite{Harper2017} a series of strategies trained using
 reinforcement learning were introduced, and a tournament containing over 200 strategies
 featured no ZDs ranked in top spots. Instead, the top ranked strategies
-were a set of ``clever'' (in the sense of Axelrod's characteristics) trained
+were a set of ``clever'' (in the sense of R. Axelrod's characteristics) trained
 strategies based on lookup tables~\cite{Axelrod1987}, hidden Markov
 models~\cite{Harper2017}, and finite state automata~\cite{Miller1996}.
 Similarly, in \cite{mathieu2017}, a set of evolutionarily-trained strategies,
@@ -178,7 +178,7 @@ in contrast to other work that may have randomly generated many essentially arbi
 strategies (typically restrained to a class such as memory-one strategies,
 or those of a certain structural form such as finite state machines or deterministic
 memory two strategies). Additionally, our tournaments come in a
-number of variations including standard tournaments emulating Axelrod's original tournaments,
+number of variations including standard tournaments emulating R. Axelrod's original tournaments,
 tournaments with noise, probabilistic match length, and both noise and probabilistic match length.
 This diversity of strategies and tournament types yields new insights and tests
 earlier claims in alternative settings against known powerful strategies.
@@ -186,7 +186,7 @@ earlier claims in alternative settings against known powerful strategies.
 The later part of the paper evaluates the impact of various strategy features
 on the performance of the strategies using standard statistical and machine learning techniques. These
 features include measures regarding a strategy's behaviour and measures regarding
-the tournaments. The outcomes of our work reinforce the discussion started by Axelrod
+the tournaments. The outcomes of our work reinforce the discussion started by R. Axelrod
 and concludes that the properties of a successful strategy in the IPD are:
 
 \begin{itemize}
